--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 
 	<script>
 		var typed = new Typed(".auto-type", {
-			strings: ["WEB DEVELOPER...", "FRONT END...", "HTML, CSS, JS - coding..."],
+			strings: ["WEB DEVELOPER...", "FRONT END...", "HTML, CSS, JS - coder..."],
 			typeSpeed: 40,
 			backSpeed: 60,
 			loop: true
